--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.18.2",
+    "firebase-admin": "^13.6.0",
     "multer": "^1.4.4",
     "mysql2": "^3.14.1",
     "prisma": "^5.13.0",
